Added HTML_Practice folder with files

--- a/Lab Class-3/index.html
+++ b/Lab Class-3/index.html
@@ -2,70 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet"href="CSS/styel.css"/>
+    <link rel="stylesheet" href="CSS/style.css"/> 
 </head>
 <body>
-   <table>
-<tr>
-<th>prity</th>
-<th>sara</th>
-<th>nipa</th>
-<th>ema</th>
-</tr>
-<tr>
-    <td>math</td>
-    <td>english</td>
-    <td>Bangla</td>
-    <td>ICT</td>
-    <td>economic</td>
-</tr>
-<tr>
-    <td>ma</td>
-    <td>eng</td>
-    <td>Ban</td>
-    <td>IC</td>
-    <td>econc</td>
-</tr>
+    <!-- Table with Proper Column Alignment -->
+    <table border="1">
+        <tr>
+            <th>Prity</th>
+            <th>Sara</th>
+            <th>Nipa</th>
+            <th>Ema</th>
+        </tr>
+        <tr>
+            <td>Math</td>
+            <td>English</td>
+            <td>Bangla</td>
+            <td>ICT</td>
+        </tr>
+        <tr>
+            <td>Ma</td>
+            <td>Eng</td>
+            <td>Ban</td>
+            <td>IC</td>
+        </tr>
+    </table>
 
+    <!-- Ordered List for Daily Tasks -->
+    <ol>
+        <li>Breakfast</li>
+        <li>Study</li>
+        <li>Sleep</li>
+        <li>Water</li>
+    </ol>
 
-   </table> 
+    <!-- Divs with Text Content -->
+    <div class="test">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fugit commodi omnis alias! 
+        Fuga molestias laudantium minus delectus totam modi optio fugit dicta itaque, sint iste nemo?
+    </div>
 
- <ol>
-    <li>Breakfast</li>
-    <li>Study</li>
-    <li>sleep</li>
-    <li>Water</li>
-  </ol>
-<div class="test">
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-Doloribus fugit commodi omnis alias! 
-Fuga molestias laudantium minusdelectus totam modi optio fugit dicta itaque, 
-sint iste nemo?
+    <div class="test">
+        Nasrin is good.
+    </div>
 
-</div>
-<div class="test">
-  nasrin is good .
-</div>
+    <!-- Iframe Centering -->
+    <iframe class="center" src="secondpage.html" width="300px" height="300px"></iframe>
 
-<iframe class="center"
-src="secondpage.html" 
-width="500px"
- height="500px"
-
- ></iframe>
-
- <form action="">
-  <label for="fname">First name</label>
-  <input type="text"name="fname"id="">
-  <label for="lname">Last name</label>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <input type="submit" value="Submit">
-  
-   </form>
-
-
+    <!-- Form for User Input -->
+    <form action="">
+        <label for="fname">First name</label>
+        <input type="text" name="fname" id="fname">
+        <label for="lname">Last name</label>
+        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 
 </body>
 </html>
