--- a/Lab Class-2/index.html
+++ b/Lab Class-2/index.html
@@ -4,134 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    p{
+    <style>
+        p {
+            background-color: rgb(196, 255, 205);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: brown;
+            text-align: right;
+        }
 
-        background-color:rgb(196, 255, 205);
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color:brown;
-        text-align: right;
+        /* You may want to add some styles for better visual appearance */
+        h1, h2, h3 {
+            text-align: center;
+        }
 
-
-    }
-
-   
-
-
-</style>
-<link rel="stylesheet" href="style.css">
-
+        /* Style for images */
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+    <link rel="stylesheet" href="CSS/styel.css">
 </head>
 <body>
 
+    <!-- Navigation links to jump to chapters -->
     <p><a href="#C4">Jump to Chapter 4</a></p>
-<p><a href="#C10">Jump to Chapter 10</a></p>
+    <p><a href="#C10">Jump to Chapter 10</a></p>
 
-<h2>Chapter 1</h2>
-<p>This chapter explains ba bla bla</p>
+    <!-- Chapter Sections -->
+    <h2>Chapter 1</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 2</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 2</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 3</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 3</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2 id="C4">Chapter 4</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2 id="C4">Chapter 4</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 5</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 5</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 6</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 6</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 7</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 7</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 8</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 8</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 9</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 9</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2 id="C10">Chapter 10</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2 id="C10">Chapter 10</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 11</h2>
-<p>This chapter explains ba bla bla</p>
+    <!-- Continue Chapters -->
+    <h2>Chapter 11</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 12</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 12</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 13</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 13</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 14</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 14</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 15</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 15</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 16</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 16</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 17</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 17</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 18</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 18</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 19</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 19</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 20</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 20</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 21</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 21</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 22</h2>
-<p>This chapter explains ba bla bla</p>
+    <h2>Chapter 22</h2>
+    <p>This chapter explains bla bla bla</p>
 
-<h2>Chapter 23</h2>
-<p>This chapter explains ba bla bla</p>
-   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.<q> Quasi quia voluptates ad esse saepe nobis? Exercitationem, aliquid</q> non veritatis expedita modi eaque, accusamus iure alias quos doloribus explicabo! Maiores, accusantium.
-   
-    <abbr style="color: aqua;"title="Institute of information">IIT</abbr>
+    <h2>Chapter 23</h2>
+    <p>This chapter explains bla bla bla</p>
 
-    <address>
-        Written by John Doe.<br> 
-        Visit us at:<br>
-        Example.com<br>
-        Box 564, Disneyland<br>
-        USA
+    <!-- Additional content -->
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <q>Quasi quia voluptates ad esse saepe nobis? Exercitationem, aliquid</q> non veritatis expedita modi eaque, accusamus iure alias quos doloribus explicabo! Maiores, accusantium.
+        <abbr style="color: aqua;" title="Institute of Information Technology">IIT</abbr>
+
+        <address>
+            Written by John Doe.<br>
+            Visit us at:<br>
+            Example.com<br>
+            Box 564, Disneyland<br>
+            USA
         </address>
 
         <bdo dir="rtl">This line will be written from right to left</bdo>
 
         <h1 style="border:2px solid Tomato;">Hello World</h1>
-        <h2 style="border:2px solid tan ;">prity das kuttisuna</h2>
-        <h3 style="border: solid thistle;">tinni is good friend</h3>
+        <h2 style="border:2px solid tan;">Prity Das Kuttisuna</h2>
+        <h3 style="border: solid thistle;">Tinni is a good friend</h3>
 
-        <img src="image/download (1).jpeg" alt="download"width="500px" height="500px">
-        
-</p> 
-<a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
-<a href="mailto:someone@example.com">Send email</a>
-<br>
-<img src="image/Scenery.jpeg"alt="Scenery"usemap=
+        <!-- Image with specified size -->
+        <img src="image/download (1).jpeg" alt="download" width="500px" height="500px">
+    </p>
 
-<map name="scene">
-<area shape="rect"coords="0,0,300,300"
-href="image/Scenery.jpeg"
+    <!-- External Links -->
+    <a href="https://www.w3schools.com/">Visit W3Schools.com!</a><br>
+    <a href="mailto:someone@example.com">Send email</a><br>
 
-</map>
+   >
+    <img src="image/Scenery.jpeg" alt="Scenery" usemap="#scene">
 
+    <map name="scene">
+        <area shape="rect" coords="0,0,300,300" href="image/Scenery.jpeg" alt="Scenery">
+    </map>
 
 </body>
-
-
-
-
 </html>
