--- a/Lab Class-6/index.html
+++ b/Lab Class-6/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Form Layout</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 
-  <div class="container-sm mt-5">
+  <div class="container-lg mt-5">
     <!-- Email -->
     <div class="mb-3">
       <label for="emailInput" class="form-label">Email address</label>
@@ -17,110 +18,105 @@
 
     <!-- Textarea -->
     <div class="mb-3">
-      <label for="textareaInput" class="form-label">Example textarea</label>
-      <textarea class="form-control" id="textareaInput" rows="3"></textarea>
+      <label for="textareaInput" class="form-label">Your Message</label>
+      <textarea class="form-control" id="textareaInput" rows="3" placeholder="Write something here..."></textarea>
     </div>
 
     <!-- Form Section with 3 Columns -->
-    <form style="background-color: aquamarine;" class="p-3 rounded">
+    <form class="p-4 bg-light rounded shadow-sm">
+      <h5 class="mb-3">Multi-column Inputs</h5>
       <div class="row mb-3">
         <div class="col">
-          <label for="emailCol1" class="form-label">Email address</label>
-          <input type="text" class="form-control" id="emailCol1" placeholder="name@example.com">
+          <label for="emailCol1" class="form-label">Work Email</label>
+          <input type="text" class="form-control" id="emailCol1" placeholder="work@example.com">
         </div>
         <div class="col">
-          <label for="emailCol2" class="form-label">Email address</label>
-          <input type="text" class="form-control" id="emailCol2" placeholder="name@example.com">
+          <label for="emailCol2" class="form-label">Personal Email</label>
+          <input type="text" class="form-control" id="emailCol2" placeholder="personal@example.com">
         </div>
         <div class="col">
-          <label for="emailCol3" class="form-label">Email address</label>
-          <input type="text" class="form-control" id="emailCol3" placeholder="name@example.com">
+          <label for="emailCol3" class="form-label">Other</label>
+          <input type="text" class="form-control" id="emailCol3" placeholder="other@example.com">
         </div>
       </div>
 
       <!-- Rows with 2 Columns Each -->
       <div class="row mb-3">
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 1, Column 1">
+          <input type="text" class="form-control" placeholder="First Name">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 1, Column 2">
+          <input type="text" class="form-control" placeholder="Last Name">
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 2, Column 1">
+          <input type="text" class="form-control" placeholder="City">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 2, Column 2">
+          <input type="text" class="form-control" placeholder="Country">
         </div>
       </div>
 
+      <!-- Datalist + Select Dropdown in one row -->
       <div class="row mb-3">
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 3, Column 1">
+          <label for="exampleDataList" class="form-label">Department</label>
+          <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+          <datalist id="datalistOptions">
+            <option value="Math">
+            <option value="IIT">
+            <option value="Chemistry">
+            <option value="Physics">
+            <option value="CSE">
+            <option value="Statistics">
+            <option value="Botany">
+            <option value="PHI">
+            <option value="Pharmacy">
+          </datalist>
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Row 3, Column 2">
+          <label class="form-label">Select Option</label>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>Select an option</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
         </div>
       </div>
+
+      <!-- Checkboxes -->
+      <div class="mb-3">
+        <label class="form-label">Select Programming Languages:</label><br>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="checkC">
+          <label class="form-check-label badge bg-secondary" for="checkC">C</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="checkCpp" checked>
+          <label class="form-check-label badge bg-primary" for="checkCpp">C++</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="checkJava">
+          <label class="form-check-label badge bg-warning text-dark" for="checkJava">Java</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="checkPython">
+          <label class="form-check-label badge bg-success" for="checkPython">Python</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="checkR">
+          <label class="form-check-label badge bg-info text-dark" for="checkR">R</label>
+        </div>
+      </div>
+
+      <!-- Submit Button -->
+      <button type="submit" class="btn btn-success w-100">Submit</button>
     </form>
-
-    <!-- Datalist Example -->
-    <div class="mt-4">
-      <label for="exampleDataList" class="form-label">Datalist example</label>
-      <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-      <datalist id="datalistOptions">
-        <option value="Math">
-        <option value="IIT">
-        <option value="Chemistry">
-        <option value="Physics">
-        <option value="CSE">
-        <option value="Statistics">
-        <option value="Botany">
-        <option value="PHI">
-        <option value="Pharmacy">
-      </datalist>
-    </div>
-
-    <!-- Select Dropdown -->
-    <div class="mt-4">
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Select an option</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
-    </div>
-
-    <!-- Checkboxes -->
-    <div class="mt-4">
-      <p>Select:</p>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkC">
-        <label class="form-check-label" for="checkC">C</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkCpp" checked>
-        <label class="form-check-label" for="checkCpp">C++</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkJava">
-        <label class="form-check-label" for="checkJava">Java</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkPython">
-        <label class="form-check-label" for="checkPython">Python</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkR">
-        <label class="form-check-label" for="checkR">R</label>
-      </div>
-    </div>
-
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
