--- a/test/index.html
+++ b/test/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Slider Example</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-    <div class="container mt-5">
-        <!-- Call function from JS instead of inline alert -->
+    <div class="container mt-5 text-center">
         <button class="btn btn-primary me-2" onclick="buttonClick1()">Hello Button</button>
-
-        <button class="btn btn-secondary me-2" onclick="paraClick()">Button 1</button>
-
-        <button class="btn btn-success" onclick="ImageClick()">Image Button</button>
+        <button class="btn btn-secondary me-2" onclick="paraClick()">Change Paragraph</button>
+        <button class="btn btn-success me-2" onclick="ImageClick()">Show First Image</button>
+        <button class="btn btn-warning me-2" onclick="prevImage()">Previous</button>
+        <button class="btn btn-info me-2" onclick="nextImage()">Next</button>
+        <button class="btn btn-danger" onclick="removeImage()">Remove Image</button>
 
         <br><br>
 
@@ -28,7 +26,8 @@
             Nemo laborum id eligendi nisi!
         </p>
 
-        <img id="imageId" src="images/p1.jpg" alt="Image will appear here" height="300" width="360">
+        <img id="imageId" src="" alt="Image will appear here" height="300" width="360" class="border rounded shadow">
+        <p id="counter" class="mt-2 fw-bold text-success"></p>
     </div>
 
     <!-- External JS -->
