--- a/HTML-Practice/index.html
+++ b/HTML-Practice/index.html
@@ -59,7 +59,9 @@
 <p>Do not forget to buy <mark>milk</mark> today.</p>
 <p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
 
+<h1 style="border: 2px solid rgb(132, 193, 28);">Hi I am Prity</h1>
 
+<h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
 
 </body>
 </html>
