--- a/HTML-Practice/index2.html
+++ b/HTML-Practice/index2.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+
 </head>
 <body>
     <p>Prity is a good girl</p>
