--- a/HTML-Practice/index.html
+++ b/HTML-Practice/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="CSS/style.css">
 </head>
   <!--<body style="background-color:powderblue;">--> 
     
@@ -62,6 +63,17 @@
 <h1 style="border: 2px solid rgb(132, 193, 28);">Hi I am Prity</h1>
 
 <h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
+
+<h3>eggcal</h3>
+
+
+
+<p class="red-text">This paragraph is red.</p>
+<p class="blue-text">This paragraph is blue.</p>
+<p class="green-text">This paragraph is green.</p>
+
+
+
 
 </body>
 </html>
