--- a/HTML-Practice/index2.html
+++ b/HTML-Practice/index2.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body 
+{
+    background-color: powderblue;
+}
+h1
+ {
+ color: blue;
+}
+p {
+    color: red;
+    }
 </style>
 
 </head>
