--- a/HTML-Practice/index.html
+++ b/HTML-Practice/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML PRACTICE</title>
      <link rel="stylesheet" href="CSS/style.css">
 </head>
   <!--<body style="background-color:powderblue;">--> 
     
    <!--- <body style="background-image:url(image/p2.jpg)"> -->
+  
  <body style="background-image: url('image/p2.jpg'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
 
     <!---Link add kora-->
@@ -73,7 +74,47 @@
 <p class="green-text">This paragraph is green.</p>
 
 
+<a href="mailto:pritydaskuttisuna@gmail.com">Send email</a>
+
+
+<button onclick="document.location='default.asp'">HTML Tutorial</button>
+<br>
+
+<!--<img src="image/vpic.png" alt="Smiley face" style="float:right;width: 400px;height: 300px;">-->
+
+
+<img src="image/vpic.png" alt="Test Image" class="v-image">
+
+<p class="im-text">This is a test paragraph with background image.</p>
+
+<br>
+
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+
+
 
 
 </body>
+
 </html>
