--- a/quiz-22/index.html
+++ b/quiz-22/index.html
@@ -4,27 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Toggle Example</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 20px;
-    }
-    img {
-      width: 300px;
-      height: 200px;
-      border: 2px solid #333;
-      cursor: pointer;
-      display: block;
-      margin: 20px auto;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  </style>
-</head>
+ 
+ <link rel="stylesheet" href="CSS/style.css">
 <body>
   <h2>Click Image to Toggle</h2>
 
